mobile navigation was going up too much the csss was fixed so i update the code.

--- a/css/index.css
+++ b/css/index.css
@@ -7,21 +7,26 @@
 }
 
 body {
-  font-family: Poppins, sans serif;
+  font-family: "Poppins", sans-serif;
 }
+
 html {
   scroll-behavior: smooth;
 }
+
 p {
   color: rgb(85, 85, 85);
 }
-/* Transitions */
+
+/* TRANSITION */
+
 a,
-btn {
+.btn {
   transition: all 300ms ease;
 }
 
-/* Deskop Nav */
+/* DESKTOP NAV */
+
 nav,
 .nav-links {
   display: flex;
@@ -29,14 +34,13 @@ nav,
 
 nav {
   justify-content: space-around;
-  height: 17vh;
   align-items: center;
+  height: 17vh;
 }
 
 .nav-links {
   gap: 2rem;
   list-style: none;
-  text-decoration: none;
   font-size: 1.5rem;
 }
 
@@ -47,7 +51,7 @@ a {
 }
 
 a:hover {
-  color: #075007;
+  color: grey;
   text-decoration: underline;
   text-underline-offset: 1rem;
   text-decoration-color: rgb(181, 181, 181);
@@ -55,17 +59,16 @@ a:hover {
 
 .logo {
   font-size: 2rem;
-  color: black;
-  font-weight: bold;
 }
+
 .logo:hover {
-  color: #075007;
   cursor: default;
 }
 
-/* Hamburger Menu */
+/* HAMBURGER MENU */
+
 #hamburger-nav {
-  display: None;
+  display: none;
 }
 
 .hamburger-menu {
@@ -84,18 +87,63 @@ a:hover {
 
 .hamburger-icon span {
   width: 100%;
-  height: 4px;
-  background: black;
+  height: 2px;
+  background-color: black;
   transition: all 0.3 ease-in-out;
 }
 
 .menu-links {
-  position: absolutely;
+  position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background-color: rgb(184, 181, 181);
+  border-radius: 6px;
   width: fit-content;
   max-height: 0;
   overflow: hidden;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.3 ease-in-out;
 }
+
+.menu-links a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.5rem;
+  color: black;
+  text-decoration: none;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+  list-style: none;
+}
+
+.menu-links.open {
+  max-height: 300px;
+}
+
+.hamburger-icon.open span:first-child {
+  transform: rotate(45deg) translate(10px, 5px);
+}
+
+.hamburger-icon.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-icon.open span:last-child {
+  transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
+}
+
+.hamburger-icon span:first-child {
+  opacity: 1;
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
+}
+
+/* SECTIONS */
